examples/errors/music/multiple_errors.abc
X:1
T:Multiple Errors
K:C
% Multiple unclosed structures
[CEG
(ABC
{def
